--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -11,13 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><font color=#555555><font size=6> FIRST AND MORE  IMPORTANT TITLE </font> <br> <br>\n",
+    "<center><font color=#555555><font size=6> Market Microstructure </font> <br> <br>\n",
     "    \n",
-    "<center><font color=#555555><font size=5> Name of the program </font> <br> <br> <br> <br>\n",
+    "<center><font color=#555555><font size=5> Financial Engineering </font> <br> <br> <br> <br>\n",
     "\n",
-    "<center><font color=#555555><font size=6> Title, full name, email of author(s) </font> <br> <br>\n",
+    "<center><font color=#555555><font size=6> Juan Pablo Ruiz Magaña, if721093@iteso.mx </font> <br> <br>\n",
     "   \n",
-    "<center> <font color= #555555> <font size = 4> Month.Year </a> | <font color= #555555> <font size = 4> Repository: <a href='https://github.com/'>Link</a></font>"
+    "<center> <font color= #555555> <font size = 4> June.2022 </a> | <font color= #555555> <font size = 4> Repository: <a href='https://github.com/JuanPablo2019/myst_jprm_lab1.git'>Link</a></font>"
    ]
   },
   {
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an introduction, normally, it is done at the very end, when all the other content in the notebook is completed but just before the abstract (which is short version of the introduction) ... "
+    "# este es un trabajo carrera tal el proposito es trabajar con x y para la microestructira se trabajo con python 3.8 "
    ]
   },
   {
@@ -161,26 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color= #6E6E6E> 2.3 Install Packages</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<font color= red> DELETE THIS CELL FROM YOUR FILE</font>\n",
-    "\n",
-    "- A \"cell magic command\" to hide output of the cell:\n",
-    "> %%capture\n",
-    "\n",
-    "- Not recommended:\n",
-    "> !pip install -r requirements.txt \n",
-    "\n",
-    "- Use these two lines instead:\n",
-    "\n",
-    "> import sys\n",
-    "<br>\n",
-    "> !{sys.executable} -m pip install -r requirements.txt"
+    "## <font color= #6E6E6E> 2.3 Load Libraries and Scripts</font>"
    ]
   },
   {
@@ -232,14 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# <font color= #6B6B6B> 4. A particular Process  </font>"
+    "## <font color= #6B6B6B> 3.1 Order Books </font>"
    ]
   },
   {
@@ -247,6 +221,46 @@
    "metadata": {},
    "source": [
     "<hr style=\"border:0.02in solid gray\"> </hr>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mostrar los primeros 5 timestamps \n",
+    "# ultimos 5 \n",
+    "# traer datos\n",
+    "# tipo de avtivo\n",
+    "# leer archivo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color= #6B6B6B> 3.2 Public Trades </font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mostrar los primeros 5 timestamps \n",
+    "# ultimos 5 \n",
+    "# traer datos\n",
+    "# tipo de avtivo\n",
+    "# leer archivo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
    ]
   },
   {
@@ -271,7 +285,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color= #6B6B6B> 5. Another particular Process  </font>"
+    "# <font color= #6B6B6B> 4. Order Book Metrics  </font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"border:0.02in solid gray\"> </hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">Micro intro, en el archivo jjsdjfdjf se encuentra la funcion mediante la cual se calcula la siguiente lista de metricas:\n",
+    "m1\n",
+    "m2\n",
+    "3\n",
+    ".\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# primer metrica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# como se calculo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imprimir resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# breve comentario"
    ]
   },
   {
@@ -283,6 +351,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imprimir resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -290,6 +367,13 @@
     "# DELETE THIS CELL IN YOUR FILE\n",
     "\n",
     "# Another particular process that is relevant for the work. Normally, you include between 2 and 5 at the most."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <font color= #6B6B6B> 5. Public Trades Metrics  </font>"
    ]
   },
   {
@@ -445,12 +529,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import data as dt"
+    "import data as dt\n",
+    "import functions as fn"
    ]
   },
   {
@@ -1504,7 +1589,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1518,7 +1603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
